--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="archivo.css">
 
-    
+
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <section class="section">Otra forma
             <button onclick="showAlert()">MensajeDeAlerta</button>
         </section>
-       
+
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -67,6 +67,9 @@
     </nav>
 
     <script type="text/javascript" src="archivo.js"></script>
+    <script>
+
+    </script>
 </body>
 
 </html>
